--- a/css/styles.css
+++ b/css/styles.css
@@ -6,15 +6,15 @@
   format("woff");
 }
 
+/* NAVBAR */
 .navbar {
   background-color: #1e272e;
   width: 100%;
   top: 0;
   z-index: 1;
-  position: sticky;
+  position: fixed;
   overflow:hidden;
 }
-
 .navbar img {
   width: 3rem;
   height: 3rem;
@@ -23,16 +23,13 @@
   float: left;
   margin: auto;
 }
-
 .navbar img:hover {
   cursor:pointer;
 }
-
 div.navbar-text {
   margin-right: 4.5%;
 }
-
-.navbar a {
+.navbar-text a {
   font-family: "helvetica-rounded-bold";
   font-size: 2rem;
   text-decoration: none;
@@ -42,15 +39,17 @@ div.navbar-text {
   float: right;
   display: block;
 }
-
 .navbar a:hover {
   color: #d92c2c;
+  transition: all .15s ease;
 }
-
 .navbar a:active {
   color:#ad2222;
 }
 
+
+
+/* HERO PAGE */
 .hero-page {
   background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), 
     url("../assets/img/family\ ukraine.PNG");
@@ -61,28 +60,66 @@ div.navbar-text {
   margin: 0px;
   padding: 0px;
   border: 0px;
+  padding-top: 3%;
   position: relative;
 }
-
-
 .text-hero h1 {
   font-size: 130px;
   color: white;
   margin:0px;
 }
-
 .text-hero {
   padding-top:5%;
   padding-left: 7%;
 }
-
 .text-hero p{
   color: #0669b2;
   font-size: 42px;
   margin-top: 15px;
   margin-bottom: 5%;
 }
-span.red {
-  color: #d92c2c;
+
+/*SUPPORT PAGE*/
+div.support {
+    background-image: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)),
+    url("../assets/img/image_support.png");
+    height: 55%;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size:cover;
+    margin: 0px;
+    padding-left: 10%;
+    padding-right: 15%;
+    padding-top: 2.5%;
+    padding-bottom: 2.5%;
+    overflow: hidden;
+    display: flex;
 }
 
+div.support img{
+  vertical-align: middle;
+  height: auto;
+}
+
+div.text-support {
+  margin-top: 7%;
+  margin-left: auto;
+  padding-left: 5%;
+}
+
+div.text-support h1 {
+  font-size: 132px;
+  color:white;
+  margin:0px;
+  padding:0px;
+}
+
+div.text-support p {
+  font-size: 32px;
+  color:#0669b2;
+  padding-top: 2%;
+  padding-bottom: 10%;
+  margin: 0;
+}
+
+/* FOOTER */
