--- a/css/utils.css
+++ b/css/utils.css
@@ -1,13 +1,12 @@
-
 body {
   height: 100%;
   padding: 0px;
   margin: 0px;
-  border:0px;
+  border: 0px;
 }
 
-button{
-  font-family: 'helvetica-rounded-bold';
+button {
+  font-family: "helvetica-rounded-bold";
   font-weight: normal;
   color: white;
   font-size: 42px;
@@ -16,19 +15,19 @@ button{
   margin: 0px;
   margin-right: 2.5%;
   padding: 0px;
-  border:0px;
+  border: 0px;
 }
 
 button:hover {
   background-color: #fc3333;
-  border-color:#fc3333;
-  transition: all .15s ease;
+  border-color: #fc3333;
+  transition: all 0.15s ease;
   cursor: pointer;
 }
 
-button:active{
-    background-color: #ad2222;
-    border-color:#ad2222
+button:active {
+  background-color: #ad2222;
+  border-color: #ad2222;
 }
 
 .btn-full {
@@ -50,9 +49,9 @@ button:active{
 }
 
 span.red {
-    color: #d92c2c;
+  color: #d92c2c;
 }
 
-span.bleu{
+span.bleu {
   color: #0669b2;
 }
