--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,80 @@ div.navbar-text {
 }
 
 /* @@@@@@@@@@@@@@@@@@@@
+   @@@ UKRAINE PAGE @@@ 
+   @@@@@@@@@@@@@@@@@@@@ */
+.ukraine {
+  display: grid;
+  grid-template-columns: 50% 50%;
+  grid-template-rows: 50% 50%;
+  height: 75%;
+  margin-top: 5%;
+}
+
+.grid-img-ukraine-01 {
+  background-image: url("../assets/img/ukraine\ destroyed.PNG");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+.grid-img-ukraine-02 {
+  background-image: url("../assets/img/_123545095_hi074346263.jpg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+}
+
+.grid-item {
+  display: grid;
+  grid-template-rows: 20% auto auto auto;
+}
+.grid-item h2 {
+  font-size: 72px;
+  margin: 0px;
+  margin-left: 5%;
+  padding: 0%;
+}
+.grid-item p {
+  font-size: 32px;
+  margin: auto;
+}
+
+.color {
+  background-color: #1e272e;
+}
+
+/* @@@@@@@@@@@@@@@@@@@
+   @@@ RUSSIE PAGE @@@ 
+   @@@@@@@@@@@@@@@@@@@ */
+
+.russie-titre{
+  font-size: 2vmax;
+  text-align: center;
+  margin-top: 5%;
+  margin-bottom: 5%;
+}
+
+.russie-img-container{
+  display: grid;
+  grid-template-columns: auto auto auto;
+  justify-content: space-between;
+margin: 7%;
+margin-top: 0;
+}
+
+.russie-card{
+  background-color:#1e272e;
+}
+.russie-card p{
+  font-size: 1.5vmax;
+  color:white;
+  margin-left: 5%;
+}
+.russie-card img{
+  width: 25vmax;
+}
+
+/* @@@@@@@@@@@@@@@@@@@@
    @@@ SUPPORT PAGE @@@ 
    @@@@@@@@@@@@@@@@@@@@ */
 div.support {
@@ -129,48 +203,6 @@ div.text-support p {
   padding-top: 2%;
   padding-bottom: 10%;
   margin: 0;
-}
-
-/* @@@@@@@@@@@@@@@@@@@@
-   @@@ UKRAINE PAGE @@@ 
-   @@@@@@@@@@@@@@@@@@@@ */
-.ukraine {
-  display: grid;
-  grid-template-columns: 50% 50%;
-  grid-template-rows: 50% 50%;
-  height: 75%;
-}
-
-.grid-img-ukraine-01 {
-  background-image: url("../assets/img/ukraine\ destroyed.PNG");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-.grid-img-ukraine-02 {
-  background-image: url("../assets/img/_123545095_hi074346263.jpg");
-  background-position: center;
-  background-repeat: no-repeat;
-  background-size: cover;
-}
-
-.grid-item {
-  display: grid;
-  grid-template-rows: 10% auto auto auto;
-}
-.grid-item h2 {
-  font-size: 72px;
-  margin: 0px;
-  margin-left: 5%;
-  padding: 0%;
-}
-.grid-item p {
-  font-size: 32px;
-  margin: auto;
-}
-
-.color {
-  background-color: #1e272e;
 }
 
 /* @@@@@@@@@@@@@@
