--- a/css/styles.css
+++ b/css/styles.css
@@ -168,6 +168,7 @@ div.navbar-text {
 }
 
 .economie img {
+  align-self: center;
   width: 40vmax;
 }
 
@@ -202,6 +203,7 @@ div.navbar-text {
 
 .monde img {
   width: 40vmax;
+  align-self: center;
 }
 
 .monde-texte {
@@ -209,10 +211,17 @@ div.navbar-text {
 }
 
 .monde-texte h1 {
-  font-size: 4.5vmax;
+  margin: 0;
+  font-size: 5vmax;
 }
 
+.monde-texte h2 {
+  margin: 0;
+  margin-top: 50px;
+  font-size: 2.5vmax;
+}
 .monde-texte p {
+  margin: 0;
   font-size: 2vmax;
   font-family: 'EB Garamond';
   font-weight: 500;
