--- a/css/styles.css
+++ b/css/styles.css
@@ -242,28 +242,20 @@ div.navbar-text {
 @media (max-width: 1200px) {
     .russie-titre {
         font-size: 5vmax;
-        text-align: center;
-        margin-top: 5%;
-        margin-bottom: 5%;
     }
 
     .russie-img-container {
         display: grid;
         grid-template-rows: auto auto auto;
         grid-template-columns: 100%;
-        margin: 7%;
-        margin-top: 0;
     }
 
     .russie-card {
-        background-color: #1e272e;
         margin-bottom: 10%;
     }
 
     .russie-card p {
         font-size: 3vmax;
-        color: white;
-        margin-left: 5%;
     }
 
     .russie-card img {
@@ -300,7 +292,7 @@ div.navbar-text {
     font-weight: 500;
 }
 
-@media (max-width: 500px) {
+@media (max-width: 600px) {
     .economie {
         display: grid;
         grid-template-rows: auto auto;
@@ -503,4 +495,27 @@ div.text-support p {
 
 .footer-logos:hover {
     cursor: pointer;
+}
+
+@media (max-width: 700px) {
+    .footer {
+        height: 35%;
+        display: grid;
+        grid-template-columns: 100%;
+        grid-template-rows: auto auto auto;
+    }
+
+    .footer img {
+        height: 14vmax;
+    }
+
+    .footer div {
+        font-size: 3vmax;
+    }
+
+    .footer-logos img {
+        height: 10vmax;
+        margin: 10px;
+        color: white;
+    }
 }
