--- a/css/styles.css
+++ b/css/styles.css
@@ -523,6 +523,10 @@ div.text-support p {
     transition: all 0.15s ease;
 }
 
+.footer a:visited{
+    color: white;
+}
+
 @media (max-width: 700px) {
     .footer {
         height: 35%;
