--- a/css/styles.css
+++ b/css/styles.css
@@ -523,10 +523,6 @@ div.text-support p {
     transition: all 0.15s ease;
 }
 
-.footer a:visited{
-    color: white;
-}
-
 @media (max-width: 700px) {
     .footer {
         height: 35%;
@@ -547,5 +543,15 @@ div.text-support p {
         height: 6vmax;
         margin: 10px;
         color: white;
+    }
+}
+
+@keyframes fadeIn {
+    0% {
+        opacity: 0;
+    }
+
+    100% {
+        opacity: 1;
     }
 }
